// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleBadge should render correctly 1`] = `
.c2 {
  width: 100%;
  height: 100%;
  cursor: pointer;
  object-fit: contain;
}

.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 2.625rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.625rem;
  width: 2.625rem;
  padding: 0.4rem;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: #CCC;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.c0:hover {
  background-color: #004A7C;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "footerCategoryColor": "#383838",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentShadowColor": "#545456",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
      "togglerBackgroundColor": "#FFF",
      "togglerBorderColor": "#EEF2F5",
      "togglerColor": "#10ADE4",
      "togglerSelectedBackgroundColor": "#10ADE4",
      "togglerSelectedColor": "#FFF",
      "tooltipBackgroundColor": "#383838",
      "tooltipBorderColor": "#383838",
      "tooltipColor": "#FFF",
    }
  }
>
  <CircleBadge
    name="facebook"
    size="2.625rem"
    url="http://www.blockchain.com"
  >
    <Styled(Link)
      size="2.625rem"
      url="http://www.blockchain.com"
    >
      <Link
        capitalize={false}
        className="c0"
        href="http://www.blockchain.com"
        italic={false}
        opacity={1}
        size="2.625rem"
        target="_blank"
        uppercase={false}
        url="http://www.blockchain.com"
        weight={400}
      >
        <styled.a
          capitalize={false}
          className="c0"
          href="http://www.blockchain.com"
          italic={false}
          opacity={1}
          size="2.625rem"
          target="_blank"
          uppercase={false}
          url="http://www.blockchain.com"
          weight={400}
        >
          <a
            className="c0 c1"
            href="http://www.blockchain.com"
            opacity={1}
            size="2.625rem"
            target="_blank"
          >
            <Image
              height="100%"
              name="facebook"
              selectable={true}
              width="100%"
            >
              <styled.img
                height="100%"
                name="facebook"
                selectable={true}
                width="100%"
              >
                <img
                  alt="facebook"
                  className="c2"
                  height="100%"
                  name="facebook"
                  src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz4KPHN2ZyB3aWR0aD0iMTJweCIgaGVpZ2h0PSIyM3B4IiB2aWV3Qm94PSIwIDAgMTIgMjMiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgICA8IS0tIEdlbmVyYXRvcjogU2tldGNoIDUwLjIgKDU1MDQ3KSAtIGh0dHA6Ly93d3cuYm9oZW1pYW5jb2RpbmcuY29tL3NrZXRjaCAtLT4KICAgIDx0aXRsZT5GaWxsIDI1NjwvdGl0bGU+CiAgICA8ZGVzYz5DcmVhdGVkIHdpdGggU2tldGNoLjwvZGVzYz4KICAgIDxkZWZzPjwvZGVmcz4KICAgIDxnIGlkPSJQYWdlLTEiIHN0cm9rZT0ibm9uZSIgc3Ryb2tlLXdpZHRoPSIxIiBmaWxsPSJ3aGl0ZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgICAgICA8ZyBpZD0iSWNvbnMiIHRyYW5zZm9ybT0idHJhbnNsYXRlKC00MzkuMDAwMDAwLCAtMS4wMDAwMDApIj4KICAgICAgICAgICAgPGcgaWQ9IkZpbGwtMjU2IiB0cmFuc2Zvcm09InRyYW5zbGF0ZSg0MzkuMDAwMDAwLCAxLjAwMDAwMCkiPgogICAgICAgICAgICAgICAgPHBhdGggZD0iTTEyLDYuODIzOTcxMjYgTDcuODI1MjM2MzksNi44MjM5NzEyNiBMNy44MjUyMzYzOSw0Ljk1NzU0NDA5IEM3LjgyNTIzNjM5LDQuMDc5Njg2NDggOC40MDYyNjAxOSwzLjg3NDkxODM1IDguODE1MTI4NzksMy44NzQ5MTgzNSBMMTEuNzM3ODU0NiwzLjg3NDkxODM1IEwxMS43Mzc4NTQ2LDAuMDEyNzM2NzczNCBMNy41MDM0MjM1NCwwIEMzLjY2MzE4ODc4LDAgMi45MzQ0NjM2NSwyLjg3OTQ5MDUzIDIuOTM0NDYzNjUsNC43MjMzODM0MSBMMi45MzQ0NjM2NSw2LjgyMzk3MTI2IEwwLDYuODIzOTcxMjYgTDAsMTAuNzQyOTc4NCBMMi45MzQ0NjM2NSwxMC43NDI5Nzg0IEwyLjkzNDQ2MzY1LDIyLjUgTDcuODI1MjM2MzksMjIuNSBMNy44MjUyMzYzOSwxMC43NDI5Nzg0IEwxMS41OTIxMDk2LDEwLjc0Mjk3ODQgTDEyLDYuODIzOTcxMjYgWiI+PC9wYXRoPgogICAgICAgICAgICA8L2c+CiAgICAgICAgPC9nPgogICAgPC9nPgo8L3N2Zz4="
                  width="100%"
                />
              </styled.img>
            </Image>
          </a>
        </styled.a>
      </Link>
    </Styled(Link)>
  </CircleBadge>
</ThemeProvider>
`;

exports[`CircleBadge should render correctly with name 1`] = `
.c2 {
  width: 100%;
  height: 100%;
  cursor: pointer;
  object-fit: contain;
}

.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 2.625rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.625rem;
  width: 2.625rem;
  padding: 0.4rem;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: #CCC;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.c0:hover {
  background-color: #004A7C;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "footerCategoryColor": "#383838",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentShadowColor": "#545456",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
      "togglerBackgroundColor": "#FFF",
      "togglerBorderColor": "#EEF2F5",
      "togglerColor": "#10ADE4",
      "togglerSelectedBackgroundColor": "#10ADE4",
      "togglerSelectedColor": "#FFF",
      "tooltipBackgroundColor": "#383838",
      "tooltipBorderColor": "#383838",
      "tooltipColor": "#FFF",
    }
  }
>
  <CircleBadge
    name="linkedIn"
    size="2.625rem"
    url="http://www.blockchain.com"
  >
    <Styled(Link)
      size="2.625rem"
      url="http://www.blockchain.com"
    >
      <Link
        capitalize={false}
        className="c0"
        href="http://www.blockchain.com"
        italic={false}
        opacity={1}
        size="2.625rem"
        target="_blank"
        uppercase={false}
        url="http://www.blockchain.com"
        weight={400}
      >
        <styled.a
          capitalize={false}
          className="c0"
          href="http://www.blockchain.com"
          italic={false}
          opacity={1}
          size="2.625rem"
          target="_blank"
          uppercase={false}
          url="http://www.blockchain.com"
          weight={400}
        >
          <a
            className="c0 c1"
            href="http://www.blockchain.com"
            opacity={1}
            size="2.625rem"
            target="_blank"
          >
            <Image
              height="100%"
              name="linkedIn"
              selectable={true}
              width="100%"
            >
              <styled.img
                height="100%"
                name="linkedIn"
                selectable={true}
                width="100%"
              >
                <img
                  alt="linkedIn"
                  className="c2"
                  height="100%"
                  name="linkedIn"
                  src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz4KPHN2ZyB3aWR0aD0iMjJweCIgaGVpZ2h0PSIyMXB4IiB2aWV3Qm94PSIwIDAgMjIgMjEiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgICA8IS0tIEdlbmVyYXRvcjogU2tldGNoIDUwLjIgKDU1MDQ3KSAtIGh0dHA6Ly93d3cuYm9oZW1pYW5jb2RpbmcuY29tL3NrZXRjaCAtLT4KICAgIDx0aXRsZT5GaWxsIDI2MzwvdGl0bGU+CiAgICA8ZGVzYz5DcmVhdGVkIHdpdGggU2tldGNoLjwvZGVzYz4KICAgIDxkZWZzPjwvZGVmcz4KICAgIDxnIGlkPSJQYWdlLTEiIHN0cm9rZT0ibm9uZSIgc3Ryb2tlLXdpZHRoPSIxIiBmaWxsPSJ3aGl0ZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgICAgICA8ZyBpZD0iSWNvbnMiIGNsYXNzPSJzb2NpYWwtaWNvbnMiIHRyYW5zZm9ybT0idHJhbnNsYXRlKC05OC4wMDAwMDAsIC01MC4wMDAwMDApIj4KICAgICAgICAgICAgPGcgaWQ9IkZpbGwtMjYzIiB0cmFuc2Zvcm09InRyYW5zbGF0ZSg5OC4wMDAwMDAsIDUwLjAwMDAwMCkiPgogICAgICAgICAgICAgICAgPHBhdGggZD0iTTE0LjUyNzMsMTEuNSBDMTMuNDIyMywxMS41IDEyLjUyNzMsMTIuMzk2IDEyLjUyNzMsMTMuNSBMMTIuNTI3MywyMC41IEw3LjUyNzMsMjAuNSBDNy41MjczLDIwLjUgNy41ODYzLDguNSA3LjUyNzMsNy41IEwxMi41MjczLDcuNSBMMTIuNTI3Myw4Ljk4NSBDMTIuNTI3Myw4Ljk4NSAxNC4wNzUzLDcuNTQyIDE2LjQ2NjMsNy41NDIgQzE5LjQyNzMsNy41NDIgMjEuNTI3Myw5LjY4NSAyMS41MjczLDEzLjg0NiBMMjEuNTI3MywyMC41IEwxNi41MjczLDIwLjUgTDE2LjUyNzMsMTMuNSBDMTYuNTI3MywxMi4zOTYgMTUuNjMyMywxMS41IDE0LjUyNzMsMTEuNSBMMTQuNTI3MywxMS41IFogTTMuMDE3Myw1LjUgTDIuOTg4Myw1LjUgQzEuNDc3Myw1LjUgMC41MDAzLDQuMzE4IDAuNTAwMywzLjAxOSBDMC41MDAzLDEuNjkgMS41MDczLDAuNjA3IDMuMDQ3MywwLjYwNyBDNC41ODgzLDAuNjA3IDUuNTM1MywxLjcyNSA1LjU2NTMsMy4wNTQgQzUuNTY1Myw0LjM1NCA0LjU4ODMsNS41IDMuMDE3Myw1LjUgTDMuMDE3Myw1LjUgWiBNNS41MjczLDIwLjUgTDAuNTI3MywyMC41IEwwLjUyNzMsNy41IEw1LjUyNzMsNy41IEw1LjUyNzMsMjAuNSBaIj48L3BhdGg+CiAgICAgICAgICAgIDwvZz4KICAgICAgICA8L2c+CiAgICA8L2c+Cjwvc3ZnPg=="
                  width="100%"
                />
              </styled.img>
            </Image>
          </a>
        </styled.a>
      </Link>
    </Styled(Link)>
  </CircleBadge>
</ThemeProvider>
`;

exports[`CircleBadge should render correctly with size 1`] = `
.c2 {
  width: 100%;
  height: 100%;
  cursor: pointer;
  object-fit: contain;
}

.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 80px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 80px;
  padding: 0.4rem;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: #CCC;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.c0:hover {
  background-color: #004A7C;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "footerCategoryColor": "#383838",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentShadowColor": "#545456",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
      "togglerBackgroundColor": "#FFF",
      "togglerBorderColor": "#EEF2F5",
      "togglerColor": "#10ADE4",
      "togglerSelectedBackgroundColor": "#10ADE4",
      "togglerSelectedColor": "#FFF",
      "tooltipBackgroundColor": "#383838",
      "tooltipBorderColor": "#383838",
      "tooltipColor": "#FFF",
    }
  }
>
  <CircleBadge
    name="facebook"
    size="80px"
    url="http://www.blockchain.com"
  >
    <Styled(Link)
      size="80px"
      url="http://www.blockchain.com"
    >
      <Link
        capitalize={false}
        className="c0"
        href="http://www.blockchain.com"
        italic={false}
        opacity={1}
        size="80px"
        target="_blank"
        uppercase={false}
        url="http://www.blockchain.com"
        weight={400}
      >
        <styled.a
          capitalize={false}
          className="c0"
          href="http://www.blockchain.com"
          italic={false}
          opacity={1}
          size="80px"
          target="_blank"
          uppercase={false}
          url="http://www.blockchain.com"
          weight={400}
        >
          <a
            className="c0 c1"
            href="http://www.blockchain.com"
            opacity={1}
            size="80px"
            target="_blank"
          >
            <Image
              height="100%"
              name="facebook"
              selectable={true}
              width="100%"
            >
              <styled.img
                height="100%"
                name="facebook"
                selectable={true}
                width="100%"
              >
                <img
                  alt="facebook"
                  className="c2"
                  height="100%"
                  name="facebook"
                  src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz4KPHN2ZyB3aWR0aD0iMTJweCIgaGVpZ2h0PSIyM3B4IiB2aWV3Qm94PSIwIDAgMTIgMjMiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgICA8IS0tIEdlbmVyYXRvcjogU2tldGNoIDUwLjIgKDU1MDQ3KSAtIGh0dHA6Ly93d3cuYm9oZW1pYW5jb2RpbmcuY29tL3NrZXRjaCAtLT4KICAgIDx0aXRsZT5GaWxsIDI1NjwvdGl0bGU+CiAgICA8ZGVzYz5DcmVhdGVkIHdpdGggU2tldGNoLjwvZGVzYz4KICAgIDxkZWZzPjwvZGVmcz4KICAgIDxnIGlkPSJQYWdlLTEiIHN0cm9rZT0ibm9uZSIgc3Ryb2tlLXdpZHRoPSIxIiBmaWxsPSJ3aGl0ZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgICAgICA8ZyBpZD0iSWNvbnMiIHRyYW5zZm9ybT0idHJhbnNsYXRlKC00MzkuMDAwMDAwLCAtMS4wMDAwMDApIj4KICAgICAgICAgICAgPGcgaWQ9IkZpbGwtMjU2IiB0cmFuc2Zvcm09InRyYW5zbGF0ZSg0MzkuMDAwMDAwLCAxLjAwMDAwMCkiPgogICAgICAgICAgICAgICAgPHBhdGggZD0iTTEyLDYuODIzOTcxMjYgTDcuODI1MjM2MzksNi44MjM5NzEyNiBMNy44MjUyMzYzOSw0Ljk1NzU0NDA5IEM3LjgyNTIzNjM5LDQuMDc5Njg2NDggOC40MDYyNjAxOSwzLjg3NDkxODM1IDguODE1MTI4NzksMy44NzQ5MTgzNSBMMTEuNzM3ODU0NiwzLjg3NDkxODM1IEwxMS43Mzc4NTQ2LDAuMDEyNzM2NzczNCBMNy41MDM0MjM1NCwwIEMzLjY2MzE4ODc4LDAgMi45MzQ0NjM2NSwyLjg3OTQ5MDUzIDIuOTM0NDYzNjUsNC43MjMzODM0MSBMMi45MzQ0NjM2NSw2LjgyMzk3MTI2IEwwLDYuODIzOTcxMjYgTDAsMTAuNzQyOTc4NCBMMi45MzQ0NjM2NSwxMC43NDI5Nzg0IEwyLjkzNDQ2MzY1LDIyLjUgTDcuODI1MjM2MzksMjIuNSBMNy44MjUyMzYzOSwxMC43NDI5Nzg0IEwxMS41OTIxMDk2LDEwLjc0Mjk3ODQgTDEyLDYuODIzOTcxMjYgWiI+PC9wYXRoPgogICAgICAgICAgICA8L2c+CiAgICAgICAgPC9nPgogICAgPC9nPgo8L3N2Zz4="
                  width="100%"
                />
              </styled.img>
            </Image>
          </a>
        </styled.a>
      </Link>
    </Styled(Link)>
  </CircleBadge>
</ThemeProvider>
`;
